fix(header): fix menu hover has gap issue

--- a/src/components/header/header.component.scss
+++ b/src/components/header/header.component.scss
@@ -7,6 +7,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  
   .icon-bar {
     background-color: #3fb2d1;
     transition: all 0.3s;
@@ -17,9 +18,11 @@
     margin-top: 0px !important;
     display: block;
   }
+  
   .icon-bar:nth-child(3) {
     margin-bottom: 0px !important;
   }
+  
   .icon-text {
     font-family: proxima-nova, sans-serif;
     font-size: 12px;
@@ -34,25 +37,53 @@
     transform-origin: right;
     transform: rotate(-45deg);
   }
+  
   .navbar-toggler .icon-bar:nth-child(2) {
     background-color: #fff;
   }
+  
   .navbar-toggler .icon-bar:nth-child(3) {
     transform-origin: right;
     transform: rotate(45deg);
     margin-bottom: 0 !important;
   }
+  
   .navbar-toggler .icon-text {
     visibility: hidden;
   }
 }
 
 ::ng-deep.cdk-overlay-pane {
-  margin-top: 12px;
+  //padding-top: 12px;
+  
   .mat-menu-panel {
     min-width: 300px;
-    border-radius: 6px;
+    background-color: transparent;
+    box-shadow: none;
+    overflow-y: hidden;
+    .menu_wrap {
+      padding-top: 12px;
+      span {
+        box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
+        position: absolute;
+        background-color: #fff;
+        border-radius: 6px;
+      }
+      
+      button {
+        background-color: #fff;
+        
+        &:nth-child(1) {
+          border-radius: 6px 6px 0 0;
+        }
+        &:nth-last-child(1) {
+          border-radius: 0 0 6px 6px;
+        }
+        
+      }
+    }
   }
+  
   .mat-menu-content:not(:empty) {
     padding: 0 !important;
   }
@@ -71,33 +102,40 @@
   a:focus {
     outline: unset;
   }
+  
   .enroll {
     &:hover {
       a {
         border-bottom: solid 3px #F3A024;
       }
     }
+    
     a {
-      color: #F3A024!important;
+      color: #F3A024 !important;
     }
   }
 }
 
 .pd-menu-item {
   border-bottom: 1px solid #EAEBEC;
+  
   &:nth-last-child(1) {
     border-bottom: none;
   }
+  
   &:hover {
     background: #FBFCFC;
+    
     a {
       color: #6ACFED !important;
     }
   }
+  
   &:focus {
     outline: unset;
     background: inherit;
   }
+  
   a {
     cursor: pointer;
     font-size: 16px;
@@ -109,10 +147,12 @@
     font-weight: 700;
     height: 48px;
     font-family: Ponddy-NotoRubik;
+    
     &.active {
       color: #3b9fbe !important;
       border: none !important;
     }
+    
     &:after {
       content: url("/assets/image/icon/arrow.png");
       float: right;
@@ -123,8 +163,10 @@
 mat-expansion-panel {
   width: 100%;
   box-shadow: none !important;
+  
   mat-expansion-panel-header {
     padding: 0;
+    
     mat-panel-title {
       justify-content: space-between;
     }
@@ -138,9 +180,10 @@ mat-expansion-panel {
 
 @media (max-width: 767px) {
   nav {
-     ::ng-deep.mat-expansion-panel-content {
+    ::ng-deep.mat-expansion-panel-content {
       height: 145vw;
-      overflow-y: scroll!important;
+      overflow-y: scroll !important;
+      
       .mobile.action.nav-item {
         position: fixed;
         bottom: 0;
@@ -152,10 +195,12 @@ mat-expansion-panel {
         background-color: #fff;
       }
     }
-     ::ng-deep.nav-item .mat-expansion-panel-content {
+    
+    ::ng-deep.nav-item .mat-expansion-panel-content {
       height: auto;
     }
-     ::ng-deep.mat-expansion-indicator::after {
+    
+    ::ng-deep.mat-expansion-indicator::after {
       display: inline-block;
       width: 0;
       height: 0;
@@ -172,6 +217,7 @@ mat-expansion-panel {
   }
   .navbar-nav {
     flex-direction: column;
+    
     .nav-item {
       max-height: fit-content !important;
     }
@@ -189,6 +235,7 @@ mat-expansion-panel {
       height: 48px;
       padding: 13px 8px !important;
       margin: 4px 8px !important;
+      
       &.active {
         color: #3b9fbe !important;
         border: none !important;
