--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,5 +35,8 @@ button:focus {
 body {
   font-family: Ponddy-NotoRubik, 'Microsoft JhengHei', sans-serif !important;
 }
+.cdk-overlay-container{
+  z-index: 10000!important;
+}
 
 
